# mageanoid

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  setup-hooks.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml  wasm.yaml
assets/levels/: .gitignore  Untitled.ldtk
src/: anim.rs  cam.rs  cat.rs  controls.rs  discord.rs  enemy.rs  ext.rs  fps.rs  gamepad.rs  health.rs  main.rs  movement.rs  music.rs  overlap.rs  persistent.rs  player.rs  projectile.rs  state.rs  style.rs  volume.rs
src/death_screen/: mod.rs
src/gameplay/: anim.rs  cat.rs  enemy.rs  enemy_die.rs  health.rs  hud.rs  mod.rs  movement.rs  overlap.rs  pause_menu.rs  player.rs  projectile.rs
src/ldtk/: mod.rs
src/mainmenu/: mod.rs
