[package]
name = "mageanoid"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
bevy = { version = "0.13.2" }
discord_game_sdk = "1.0.1"

[dev-dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
