[package]
name = "mageanoid"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
bevy = { version = "0.14.0" }
bevy_ui = { version = "0.14.0" }

[dev-dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking", "bevy_dev_tools"] }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
